# Onyx

./: .gitignore  CMakeLists.txt  README.md  scaffold_folders.py
src/: main.cpp
src/audio/: agc.cpp  agc.h  audio_engine.cpp  audio_engine.h  codec.cpp  codec.h  echo.cpp  echo.h  engine.cpp  engine.h  mixer.cpp  mixer.h  ns.cpp  ns.h  speaker_detector.cpp  speaker_detector.h  stream_stats.cpp  stream_stats.h
src/core/: event_bus.cpp  event_bus.h  rtp_scheduler.cpp  rtp_scheduler.h  scheduler.h
src/net/: control_client.cpp  control_client.h
src/network/: congestion_controller.cpp  congestion_controller.h  discovery.cpp  discovery.h  failover_manager.cpp  failover_manager.h  ice_agent.cpp  ice_agent.h  keepalive.cpp  keepalive.h  peer_manager.cpp  peer_manager.h  qos.cpp  qos.h  router_load.cpp  router_load.h  rtcp.cpp  rtcp.h  stun.cpp  stun.h  subscription_table.cpp  subscription_table.h  tree.cpp  tree.h  turn.cpp  turn.h
src/protocol/: message_types.h  rtp.cpp  rtp.h  serializer.cpp  serializer.h
src/security/: auth.cpp  auth.h  dtls_srtp.cpp  dtls_srtp.h  key_exchange.cpp  key_exchange.h  replay_protection.cpp  replay_protection.h
src/tools/: metrics_server.cpp  metrics_server.h  network_graph.cpp  network_graph.h  packet_capture.cpp  packet_capture.h
src/ui/: main_window.cpp  main_window.h  participant_row.cpp  participant_row.h  settings_dialog.cpp  settings_dialog.h  startup_dialog.cpp  startup_dialog.h  volume_control_panel.cpp  volume_panel.cpp  volume_panel.h
src/ui/components/: helpers.ui  participant_row.cpp  settings_dialog.cpp  ui_helpers.ui  uihelpers.cpp  uihelpers.h
src/utils/: adaptive_jitter_buffer.cpp  adaptive_jitter_buffer.h  crypto_utils.cpp  crypto_utils.h  jitter_buffer.cpp  jitter_buffer.h  vad.cpp  vad.h
